refactor: Use GenericSearchBar in PreviewTextPanel and HistoryOutputPanel